# TSC_LLM_rules

./: .gitignore  README.md  llm_rules_tsc.py  prompt_simplifications.py  pyproject.toml  train_models.py
Utils/: compare_support_examples.py  generate_synthetic_data.py  load_data.py  load_models.py  metrics.py  save_llm_results.py  save_rule_examples_pdf.py  selectPrototypes.py
data/: DataSummary.csv
data/Synthetic/: Synthetic_TEST.npy  Synthetic_TEST_normalized.npy  Synthetic_TRAIN.npy  Synthetic_TRAIN_normalized.npy  Synthetic_VALIDATION.npy  Synthetic_VALIDATION_normalized.npy
results/: explore_tsc_llm_rules_results.ipynb  global_results.ipynb  llm_rules_results.jsonl  llm_rules_results_Chinatown_rulebased.jsonl  results.csv
results/Synthetic/: models.csv
results/UMD/: miniRocket_alpha_complexity_loyalty.csv
results/llm_explore/: explore_tsc_llm_rules_results.ipynb
results/llm_raw_outputs/: Chinatown_baselineNoPrototype_2_2_run_1.txt  Chinatown_baselineNoPrototype_2_2_run_2.txt  Chinatown_baselineNoPrototype_2_2_run_3.txt  Chinatown_baselineNoPrototype_3_2_run_1.txt  Chinatown_baselineNoPrototype_3_2_run_2.txt  Chinatown_baselineNoPrototype_3_2_run_3.txt  Chinatown_baseline_2_2_run_1.txt  Chinatown_baseline_2_2_run_2.txt  Chinatown_baseline_2_2_run_3.txt  Chinatown_baseline_3_2_run_1.txt  Chinatown_baseline_3_2_run_2.txt  Chinatown_baseline_3_2_run_3.txt  Chinatown_noPrototype_3_3_run_1.txt  Chinatown_noPrototype_3_3_run_2.txt  Chinatown_noPrototype_3_3_run_3.txt  Chinatown_rulebased_2_2_run_1.txt  Chinatown_rulebased_2_2_run_2.txt  (+79 more)
(+114 files in other folders)
